Bug 140532 Attached messages display incorrect headers r=ducarroz sr=bienvenu